# Lab_4

alquiler/: CMakeLists.txt
alquiler/include/: SistemaAlquiler.h  Type.h  Vehiculo.h
alquiler/src/: SistemaAlquiler.cpp  Type.cpp  Vehiculo.cpp  main.cpp
biblioteca/: CMakeLists.txt
biblioteca/include/: Biblioteca.h  Libro.h
biblioteca/src/: Biblioteca.cpp  Libro.cpp  main.cpp
